  * With 2.6.18, nic-extra-modules gets too big to fit on the i386
    net-drivers-1 floppy with nic-modules. Move nic-extra-modules to
    net-drivers-2 and reorg to fit.
  * Don't exclude usb drivers from driver floppies; the root floppy does not
    currently load them.

  [ Sven Luther ]
  * Switch powerpc to 2.6.18-2.
  * Add a prep flavour.

 -- Joey Hess <joeyh@debian.org>  Thu, 16 Nov 2006 16:14:48 -0500

debian-installer (20061102) unstable; urgency=low

  [ Joey Hess ]
  * Increased hardcoded ramdisk_size in aboot.conf to 20 mb, 16 mb is just
    barely too small with current images.

  [ Martin Michlmayr ]
  * Add input-modules to the ixp4xx initrd.

  [ Frans Pop ]
  * Fix the generation of MANIFEST.udebs for extra floppy images.
  * Add boot option "auto" for i386, amd64, powerpc and sparc to support the
    new auto-install functionality.

 -- Frans Pop <fjp@debian.org>  Thu,  2 Nov 2006 03:25:11 +0100

debian-installer (20061022) unstable; urgency=low

  [ Joey Hess ]
  * Remove some leftover 2.4+2.6 support in the ia64 configs.
  * Make amd64 consitently use initramfs images.
  * Drop 2.4 support for i386.
  * Merge most differences between i386 and amd64 configs. Only remaining
    difference is that floppy support is still desirable (though not
    present) for i386.
  * Build gtk isolinux initrd as part of the build process for the
    regular isolinux image, so that it will be included properly in the
    isolinux files.
  * Switch i386 to 2.6.17-2.
  * Remove root=/dev/ram from syslinux configs, turns out not to be needed for
    the kernel to find initramfs.
  * Remove ramdisk_size= and "rw" settings, also not needed.
  * Which means that ramdisk-size-subst is not needed for x86; removed
    calls to it.

  [ Martin Michlmayr ]
  * Switch arm to 2.6.17-2.
  * Clean-up arm config now that 2.4 is gone.
  * Use mknettrom from the nwutil package instead of our own local copy.
  * Add images for iop32x with support for GLAN Tank.