@@ -31,6 +31,9 @@ debian-installer (2006xxxx) UNRELEASED; urgency=low
   * Switch powerpc to 2.6.18-2.
   * Add a prep flavour.
 
+  [ Thiemo Seufer ]
+  * Fix tftpboot.sh for mips/r5k-ip32.
+
  -- Joey Hess <joeyh@debian.org>  Thu, 16 Nov 2006 16:14:48 -0500
 
 debian-installer (20061102) unstable; urgency=low
